auth works, product works - auth only stores tokens with hard coded email and role - products work but unstable with bad error handling

--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,11 @@
               "browserTarget": "angular-OMS:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
+        }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -99,6 +103,12 @@
           }
         }
       }
+    },
+    "cli": {
+      "analytics": false
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
