--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
